# actix_redis_server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  redis_service.rs
