[package]
name = "actix_redis_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
mime_guess = "2.0.5"
redis = { version = "0.23", features = ["async-std-comp"] }
serde = "1.0"
serde_derive = "1.0"
